@@ -35,7 +35,7 @@ import org.eclipse.jetty.start.StartLog;
 /**
  * Management of the <code>${jetty.base}/start.d/</code> based configuration.
  * <p>
- * Implementation of the <code>--add-modues=[name]</code> command line behavior
+ * Implementation of the <code>--add-modules=[name]</code> command line behavior
  */
 public class StartDirBuilder implements BaseBuilder.Config
 {
